Add a global.yaml variable to demo variable instantiation in example_tests

--- a/example_tests/2_a_faulty_test_that_demonstrates_failure/config.yaml
+++ b/example_tests/2_a_faulty_test_that_demonstrates_failure/config.yaml
@@ -1,2 +1,2 @@
 test_description: 'test if cat command creates a file, leaving an existing file alone, deliberate diffs'
-command: 'echo This is some text. | cat > file.txt'
+command: 'echo {test_var} | cat > file.txt'
