--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.10"
 click = "^8.1.3"
 pyyaml = "^6.0"
 pyfakefs = "^5.0.0"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
