Amend example 2 test so there's a stdout.txt expectation failure

--- a/self_tests/0_example_tests/config.yaml
+++ b/self_tests/0_example_tests/config.yaml
@@ -1,2 +1,2 @@
-test_description: 'tests the example_tests'
+test_description: 'tests the blackbox_tester tool on the example_tests data'
 command: 'python3 ../../../blackbox_tester.py example_tests'
