--- a/bbtests_self_tests/5_missing_config_yaml_fails/config.yaml
+++ b/bbtests_self_tests/5_missing_config_yaml_fails/config.yaml
@@ -1,3 +1,3 @@
-test_description: 'Test that missing input folder makes tool exit with code 1'
+test_description: 'Test that missing config.yaml makes tool exit with code 1'
 command: 'python3 ../../../blackbox_tester.py bbtests_empty_input_output_folders'
 expected_return_code: '1'
