Improve test desc str

--- a/bbtests_self_tests/0b_example_tests_one_fails_due_to_stdout_mismatch/config.yaml
+++ b/bbtests_self_tests/0b_example_tests_one_fails_due_to_stdout_mismatch/config.yaml
@@ -1,2 +1,2 @@
-test_description: 'test that stdout mismatch causes failure, creates stdout.txt and does not create working/ folder'
+test_description: 'test that stdout mismatch (with in/out match) causes failure, creates stdout.txt and does not create working/ folder'
 command: 'python3 ../../../blackbox_tester.py bbtests_examples'
