Make root dir be abs to fix issue in verify func, fix tests

--- a/bbtests_self_tests/0a_example_tests_one_fails_due_to_input_output_file_orphan__no_create_working_artifacts/config.yaml
+++ b/bbtests_self_tests/0a_example_tests_one_fails_due_to_input_output_file_orphan__no_create_working_artifacts/config.yaml
@@ -1,2 +1,2 @@
-test_description: 'test that file structure mismatch causes failure and no working artifacts due to flag create_working_artifacts = n'
+test_description: 'test that file structure mismatch causes failure and no working artifacts due to flag always_delete_working_artifacts: y'
 command: 'python3 ../../../blackbox_tester.py bbtests_examples'
