--- a/bbtests_self_tests/0b_example_tests_one_fails_due_to_stdout_mismatch0b_example_tests_one_fails_due_to_stdout_mismatch/output/bbtests_examples/2_a_faulty_test_that_demonstrates_failure/config.yaml
+++ b/bbtests_self_tests/0b_example_tests_one_fails_due_to_stdout_mismatch0b_example_tests_one_fails_due_to_stdout_mismatch/output/bbtests_examples/2_a_faulty_test_that_demonstrates_failure/config.yaml
@@ -1,3 +1,3 @@
 test_description: 'test if cat command creates a file, leaving an existing file alone, deliberate diffs'
 command: 'echo {test_var} | cat > file.txt'
-create_working_artifacts: n
+always_delete_working_artifacts: y
